<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/hardware_keyboard_category_title">

        <ListPreference
            android:defaultValue="romaji"
            android:entries="@array/physical_keyboard_input_mode_entries"
            android:entryValues="@array/physical_keyboard_input_mode_values"
            android:key="physical_keyboard_input_mode_preference"
            android:title="@string/physical_keyboard_input_mode_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="physical_keyboard_floating_dock_visibility_preference"
            android:title="@string/physical_keyboard_floating_dock_visibility_title"
            app:iconSpaceReserved="false"
            app:summary="@string/physical_keyboard_floating_dock_visibility_summary" />

        <Preference
            android:key="physical_keyboard_shortcut_setting_preference"
            android:summary="@string/physical_keyboard_shortcut_setting_summary"
            android:title="@string/physical_keyboard_shortcut_setting_title" />

    </PreferenceCategory>
</PreferenceScreen>
